# DiscordMusicBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_RU.md  buttons.py  compose.yaml  handlers.py  main.py  models.py  patches.py  pyproject.toml  requirements.txt
src/musicbot/: __init__.py  __main__.py  bot.py  commands.py  config.py  errors.py  music_queue.py  player.py  source.py  track.py  ui.py  views.py
