[project]
name = "musicbot"
version = "1.0.0"
description = "A Discord music bot with slash commands, queue management, and interactive UI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dellenoam" }]
requires-python = ">=3.13"
dependencies = [
    "discord.py[voice]>=2.5.2",
    "yt-dlp>=2025.7.21",
    "python-dotenv>=1.0.1",
]

[project.scripts]
musicbot = "musicbot.bot:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicbot"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "C4",   # comprehensions
    "PIE",  # misc lints
    "PL",   # pylint
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value
    "RUF001",   # ambiguous unicode chars — false positives in Russian text
]

[tool.ruff.lint.per-file-ignores]
"src/musicbot/bot.py" = ["PLR0915"]  # main() is allowed to be long

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
venvPath = "."
venv = ".venv"
